<resources>
    <string name="app_name">PlayForLearn</string>

    <!-- Strings related to login -->
    <string name="ok">Ok</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="str_next">Avanti</string>
    <string name="title_activity_result">Results!!!</string>

    <string name="annulla">Annulla</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="nome">Nome</string>
    <string name="username">Username</string>
    <string name="classe">Classe</string>
    <string name="italiano">Italiano</string>
    <string name="mate">Matematica</string>
    <string name="ing">Inglese</string>
    <string name="storia">Storia </string>
    <string name="geografia">Geografia</string>
    <string name="cognome">Cognome</string>
    <string name="promptUsername">Usermame</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_register">Registrati</string>
    <string name="error_invalid_email">Username non valido</string>
    <string name="error_invalid_password">password troppo corta</string>
    <string name="error_incorrect_password"> password non corretta</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username completions."     </string>
    <string name="title_activity_games">Games</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
