<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="TextView"
        android:textSize="40dp"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRec"
        tools:text="Registrati" />

    <android.support.design.widget.TextInputEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nome"/>

    <android.support.design.widget.TextInputEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/cognome"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RadioButton
        android:text="Prima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton" />

    <RadioButton
        android:text="Seconda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton2" />

    <RadioButton
        android:text="Terza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton3" />

    <RadioButton
        android:text="Quarta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton4" />

    <RadioButton
        android:text="Quinta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton5" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/LOk"
            android:layout_alignLeft="@+id/LAnnulla"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/ok"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:id="@+id/btOK" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:id="@+id/LAnnulla"
            android:layout_alignRight="@id/LOk"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annulla"
                android:layout_marginLeft="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:id="@+id/btAnnulla" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>